# myserver

./: .gitattributes  README.md
libs/mysql/: mysql_driver.h
src/: makeprotobuf.sh
src/common/: Client.cpp  Client.h  CommDefine.h  Filter.hpp  Json.hpp  LoadPlayerData.hpp  MysqlClient.cpp  MysqlClient.h  ParseConfig.hpp  ProtoIdDef.h  Rank.hpp  Singleton.h  Timer.hpp  Tools.hpp
src/common/log/: Log.cpp  Log.h
src/common/net/: Buffer.cpp  Buffer.h  Channel.cpp  Channel.h  Data.h  EventLoop.cpp  EventLoop.h  TcpConnecter.cpp  TcpConnecter.h  TcpServer.cpp  TcpServer.h
src/common/pb/: Active.pb.cc  Active.pb.h  Bag.pb.cc  Bag.pb.h  Charge.pb.cc  Charge.pb.h  Chat.pb.cc  Chat.pb.h  Common.pb.cc  Common.pb.h  FunctionOpen.pb.cc  FunctionOpen.pb.h  Login.pb.cc  Login.pb.h  Mail.pb.cc  Mail.pb.h  Player.pb.cc  Player.pb.h  Server.pb.cc  Server.pb.h  ServerCommon.pb.cc  ServerCommon.pb.h
src/dbServer/: config.json
src/dbServer/src/: CMakeLists.txt  MainThread.cpp  MainThread.h  main.cpp
src/dbServer/src/msgHandle/: msgHandle.cpp  msgHandle.h
src/gameServer/: createproto.py  createproto.python  makeprotobuf  protoc  protoname.py
src/gameServer/protobuf/: Active.proto  Adventure.proto  Bag.proto  Boss.proto  Carriage.proto  Charge.proto  Chat.proto  Common.proto  CumulativeCharge.proto  EightSign.proto  EquipProduct.proto  Fight.proto  FirstChargeGift.proto  FunctionOpen.proto  Furniture.proto  Gacha.proto  Guild.proto  Hero.proto  Login.proto  Mail.proto  Player.proto  Rating.proto  Server.proto  SevenTask.proto  Store.proto  Task.proto  Tower.proto  WorkShop.proto
src/gameServer/src/: CMakeLists.txt  MainThread.cpp  MainThread.h  main.cpp
src/gameServer/src/bag/: Bag.cpp  Bag.h
src/gameServer/src/codec/: Codec.cpp  Codec.h
src/gameServer/src/configparse/: CfgMgr.cpp  CfgMgr.h
src/gameServer/src/fight/: Fight.cpp  Fight.h  FightBuff.cpp  FightBuff.h  FightEntity.cpp  FightEntity.h  FightMgr.cpp  FightMgr.h  FightSkill.cpp  FightSkill.h
src/gameServer/src/msgHandle/: msgHandle.cpp  msgHandle.h
src/gameServer/src/pb/: Active.pb.cc  Active.pb.h  Bag.pb.cc  Bag.pb.h  Common.pb.cc  Common.pb.h  Fight.pb.cc  Fight.pb.h  Hero.pb.cc  Hero.pb.h  Login.pb.cc  Login.pb.h  Mail.pb.cc  Mail.pb.h
src/gameServer/src/player/: Player.cpp  Player.h  PlayerMgr.cpp  PlayerMgr.h
src/gameServer/src/public/: Lua.hpp  Rank.hpp
src/gameServer/src/script/: Script.cpp  Script.h
src/gateServer/src/: CMakeLists.txt  MainThread.cpp  MainThread.h  main.cpp
src/logServer/: makeprotobuf
src/logServer/src/: CMakeLists.txt  GameLog.hpp  MainThread.cpp  MainThread.h  main.cpp
src/logServer/src/msgHandle/: msgHandle.cpp  msgHandle.h
src/protobuf/: ServerCommon.proto
